<resources>
    <string name="app_name" translatable="false">WapoViews</string>
    <string name="wapo_views_live" translatable="false">LIVE</string>
    <string name="share_using_msg" translatable="false">Share using</string>
    <string name="share_link" translatable="false">Share</string>

    <string name="dismiss_label" translatable="false">Dismiss</string>

    <string name="embed_gallery_open" translatable="false">SHOW MORE PHOTOS</string>
    <string name="embed_gallery_close" translatable="false">HIDE PHOTOS</string>
    <string name="embed_gallery_open_one" translatable="false">SHOW 1 MORE PHOTO</string>
    <string name="embed_gallery_open_numbered" translatable="false">SHOW %d MORE PHOTOS</string>
    <string name="country" translatable="false">Country</string>

    <string name="hierarchy_recent">recent</string>
    <string name="hierarchy_sections">sections</string>

    <string name="smv_breaking_news">Breaking News</string>
    <string name="smv_the7_briefs">The 7 Briefing</string>
    <string name="smv_politics">Politics</string>
    <string name="smv_health_science">Health and Science</string>
    <string name="smv_entertainment">Entertainment</string>
    <string name="smv_world">World</string>
    <string name="smv_local">Local</string>
    <string name="smv_sports">Sports</string>
    <string name="smv_opinions">Opinions</string>
    <string name="smv_editorspicks">Editors\' Picks</string>
    <string name="smv_business_tech">Business and Tech</string>
    <string name="smv_newsalerts">News Alerts</string>
    <string name="smv_games">Games</string>
    <string name="smv_advice">Advice</string>
    <string name="smv_us">U.S.</string>
    <string name="smv_business">Business</string>
    <string name="smv_technology">Technology</string>
    <string name="smv_climate">Climate</string>
    <string name="smv_health">Health</string>
    <string name="smv_food">Food</string>
    <string name="smv_special_report">Special Report</string>
    <string name="smv_post_reports">Post Reports</string>
    <string name="daily_read">Your Daily Read</string>

    <string name="empty" translatable="false" />

    <string name="all_caught_up">All caught up!</string>
    <string name="daily_roundup">Your roundup from The Washington Post</string>

    <string name="medals_country">Country</string>
    <string name="medals_total">Total</string>
    <string name="olympics_date">Date</string>
    <string name="olympics_event">Event</string>
    <string name="olympics_time">Start Time (%1$s)</string>
    <string name="cd_gold">Gold</string>
    <string name="cd_silver">Silver</string>
    <string name="cd_bronze">Bronze</string>
    <string name="end_of_stack">Stack is empty</string>

    <string name="audio_carousel_item_listen">Listen</string>
    <string name="audio_carousel_item_now_playing">Now playing</string>
    <string name="audio_carousel_item_min">min</string>
    <string name="games_tooltip_text" translatable="false">NEW! All your favorite games in one place.</string>
    <string name="games_tooltip_text_bold" translatable="false">NEW!</string>

    <string name="listen_to_podcast">Listen to podcast</string>

    <!-- PostAnswers -->
    <string name="ai_overview_loading_title">Ask The Post AI</string>
    <string name="ai_overview_loading">We\'re on it. Checking our sources . . . </string>
    <string name="ai_overview_loading_description">Generating a response…</string>
    <string name="ai_overview_error_title">Ask The Post AI</string>
    <string name="ai_overview_error_description">This is an experiment. Answer is generated by AI from the published Washington Post articles provided here. Because AI can make mistakes, please verify the response by consulting these articles.</string>
    <string name="ai_overview_error_content_title">Sorry, we couldn\'t generate an answer — this feature is still experimental. See search results below or try another question.</string>
    <string name="ai_overview_show_more_expand_button">Show More</string>
    <string name="ai_overview_description_learn_more">Learn more</string>
    <string name="ai_overview_feedback_title">Was this overview useful?</string>
    <string name="ai_overview_feedback_answer">Was this answer useful?</string>
    <string name="atp_text_placeholder">What would you like to know?</string>
    <string name="atp_text_followup_placeholder">Ask a follow-up question</string>
    <string name="atp_text_unavailable_content">This content isn’t available.</string>
</resources>
