<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:focusableInTouchMode="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    app:alignItems="center"
    app:flexWrap="nowrap">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="none"
        android:gravity="start"
        android:singleLine="true"
        android:text="@string/medals_country"
        android:textColor="@color/olympics_header"
        android:textSize="12sp"
        app:layout_flexGrow="1" />

    <ImageView
        android:id="@+id/gold_medal_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/cd_gold"
        android:scaleType="fitCenter"
        app:layout_flexShrink="0"
        app:layout_minWidth="40dp"
        app:srcCompat="@drawable/gold" />

    <ImageView
        android:id="@+id/silver_medal_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/cd_silver"
        android:scaleType="fitCenter"
        app:layout_flexShrink="0"
        app:layout_minWidth="40dp"
        app:srcCompat="@drawable/silver" />

    <ImageView
        android:id="@+id/bronze_medal_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/cd_bronze"
        android:scaleType="fitCenter"
        app:layout_flexShrink="0"
        app:layout_minWidth="40dp"
        app:srcCompat="@drawable/bronze" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:ellipsize="none"
        android:gravity="end"
        android:minWidth="70dp"
        android:singleLine="true"
        android:text="@string/medals_total"
        android:textColor="@color/olympics_header"
        android:textSize="12sp"
        app:layout_flexShrink="0" />

</com.google.android.flexbox.FlexboxLayout>